[package]
name = "software-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.24.0"
glam = "0.23.0"
gltf = "1.0.0"
stb_image = "0.2.4"

[[bin]]
name = "part1"
path = "src/part1/main.rs"

[[bin]]
name = "part2"
path = "src/part2/main.rs"

[[bin]]
name = "part3"
path = "src/part3/main.rs"